class: TicketsGeneratorWayImpl2.java realize parent => child tickets